--- a/src/Assets/Css/Global.css
+++ b/src/Assets/Css/Global.css
@@ -1,7 +1,7 @@
 :root {
-  --background--color: #5b985c;
-  --text--color: #1d1d1d;
-  --accent--color: #1e9c20a8;
+  --background--color: #121212;
+  --text--color: #ffffff;
+  --accent--color: #8800ffa8;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
   left: 0;
   top: 0;
   justify-content:space-between;
-  background-color: rgba(19, 66, 7, 0.558);
+  background-color: rgba(44, 44, 44, 0.558);
   backdrop-filter: blur(10px);
   padding: 16px;
   align-items: center;
@@ -36,7 +36,7 @@ body {
   position: fixed;
   bottom: 0;
   left: 0;
-  background-color: rgba(11, 63, 3, 0.558);
+  background-color: rgba(44, 44, 44, 0.558);
   backdrop-filter: blur(10px);
   width: 100%;
   color: #fff;
